# Speedy2D

./: Cargo.toml
examples/: animation.rs  hello_world.rs  input_callbacks.rs  managing_context.rs  mouse_grab.rs  moving_text.rs  user_events.rs
examples/webgl/src/: buttons.rs  main.rs
src/: color.rs  dimen.rs  error.rs  font.rs  font_cache.rs  glbackend.rs  glwrapper.rs  image.rs  lib.rs  renderer2d.rs  shape.rs  shapes.rs  texture_packer.rs  web.rs  window.rs  window_internal_glutin.rs  window_internal_web.rs
src/rusttype/: font.rs  mod.rs  outliner.rs  rasterizer.rs
test/: main.rs
