[package]
name = "speedy2d"
version = "1.12.0"
authors = ["QuantumBadger <speedy2d@redreader.org>"]
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
description = """
Hardware-accelerated drawing of shapes, images, and text, with an easy to use
API. Speedy2D aims to be the simplest Rust API for creating a window, rendering graphics,
and handling input.
"""
keywords = ["opengl", "gamedev", "graphics", "font"]
categories = ["rendering::graphics-api", "game-development", "graphics"]
repository = "https://github.com/QuantumBadger/Speedy2D"
documentation = "https://docs.rs/speedy2d"

[features]
default = ["windowing", "windowing-x11", "image-loading", "backtrace", "text"]
image-loading = ["image"]
windowing = ["glutin"]
windowing-x11 = ["glutin/x11"]
windowing-wayland = ["glutin/wayland", "glutin/wayland-dlopen", "glutin/wayland-csd-adwaita"]
backtrace = ["dep:backtrace"]
text = ["owned_ttf_parser", "unicode-normalization"]

[dependencies]
gl = "0.14"
glow = "0.7"
glam = "0.23.0"
log = "0.4"
num-traits = "0.2"
earcutr = "0.4.1"
smallvec = "1.10.0"

# For backtrace feature
backtrace = { version = "0.3", optional = true }

# For text feature
owned_ttf_parser = { version = "0.18.1", optional = true }
unicode-normalization = { version = "0.1", optional = true }

# For image_loading feature
image = { version = "0.23", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# For windowing feature
glutin = { version = "0.29.1", default-features = false, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }

[target.'cfg(any(doc, doctest, target_arch = "wasm32"))'.dependencies.web-sys]
version = "0.3"
features = [
    "AddEventListenerOptions",
    "CssStyleDeclaration",
    "DomRect",
    "HtmlCanvasElement",
    "KeyboardEvent",
    "MediaQueryList",
    "MediaQueryListEvent",
    "MouseEvent",
    "WheelEvent",
    "Performance",
    "WebGl2RenderingContext",
    "Window",
]

# Tests using a headless GL context.

[[test]]
name = "test"
path = "test/main.rs"
harness = false

[dev-dependencies]
simple_logger = { version = "1.11", default-features = false, features = ["colors"] }
image = { version = "0.23" }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
glutin = { version = "0.29.1", default-features = false, features = ["x11"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen = { version = "0.2" }

# Examples: must be listed manually as they require the "windowing" feature.

[[example]]
name = "hello_world"
required-features = ["windowing"]

[[example]]
name = "managing_context"
required-features = ["windowing"]

[[example]]
name = "user_events"
required-features = ["windowing"]

[[example]]
name = "input_callbacks"
required-features = ["windowing"]

[[example]]
name = "animation"
required-features = ["windowing"]

[[example]]
name = "load_image"
required-features = ["windowing", "image-loading"]

[[example]]
name = "mouse_grab"
required-features = ["windowing"]

[[example]]
name = "moving_text"
required-features = ["windowing"]

#[workspace]
#members = [
#    "examples/webgl",
#]
