[package]
name = "speedy2d"
version = "2.1.0"
authors = ["QuantumBadger <speedy2d@redreader.org>"]
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
description = """
Hardware-accelerated drawing of shapes, images, and text, with an easy to use
API. Speedy2D aims to be the simplest Rust API for creating a window, rendering graphics,
and handling input.
"""
keywords = ["opengl", "gamedev", "graphics", "font"]
categories = ["rendering::graphics-api", "game-development", "graphics"]
repository = "https://github.com/QuantumBadger/Speedy2D"
documentation = "https://docs.rs/speedy2d"

[features]
default = ["windowing", "windowing-wayland"]
shapes = []
image-loading = ["image"]
image-png = ["image/png"]
image-jpeg = ["image/jpeg"]
windowing = ["glutin"]
windowing-x11 = ["glutin/x11"]
windowing-wayland = ["glutin/wayland", "glutin/wayland-dlopen", "glutin/wayland-csd-adwaita"]
backtrace = ["dep:backtrace"]
text = ["glam_rusttype", "unicode-normalization", "basic_rect_packer"]

[dependencies]
glow = "0.7"
glam = "^0.25"
glam_rect = { version = "0.1.0", path = "./glam_rect" }
log = "0.4"
num-traits = "0.2"
earcutr = "0.4.1"
smallvec = "1.10.0"

# For backtrace feature
backtrace = { version = "0.3", optional = true }

# For text feature
unicode-normalization = { version = "0.1", optional = true }
glam_rusttype = { version = "0.1.0", git = "https://github.com/kirinokirino/glam_rusttype.git", optional = true }
basic_rect_packer = { version = "0.1.0", git = "https://github.com/kirinokirino/basic_rect_packer.git", optional = true }

# For image_loading feature
image = { version = "0.23", default-features = false, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# For windowing feature
glutin = { version = "0.29.1", default-features = false, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }

[target.'cfg(any(doc, doctest, target_arch = "wasm32"))'.dependencies.web-sys]
version = "0.3"
features = [
    "AddEventListenerOptions",
    "CssStyleDeclaration",
    "DomRect",
    "HtmlCanvasElement",
    "KeyboardEvent",
    "MediaQueryList",
    "MediaQueryListEvent",
    "MouseEvent",
    "WheelEvent",
    "Performance",
    "WebGl2RenderingContext",
    "Window",
]

# Tests using a headless GL context.

[[test]]
name = "test"
path = "test/main.rs"
harness = false
required-features = ["text", "shapes", "image-loading", "image-png"]

[dev-dependencies]
speedy2d = { path = ".", features = ["text", "image-loading", "image-png"] }
simple_logger = { version = "1.11", default-features = false, features = ["colors"] }
image = { version = "0.23" }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
glutin = { version = "0.29.1", default-features = false, features = ["x11"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen = { version = "0.2" }

# Examples: must be listed manually as they require the "windowing" feature.

[[example]]
name = "hello_world"
required-features = ["windowing", "text"]

[[example]]
name = "managing_context"
required-features = ["windowing", "text"]

[[example]]
name = "user_events"
required-features = ["windowing"]

[[example]]
name = "input_callbacks"
required-features = ["windowing"]

[[example]]
name = "animation"
required-features = ["windowing"]

[[example]]
name = "load_image"
required-features = ["windowing", "image-loading"]

[[example]]
name = "mouse_grab"
required-features = ["windowing", "text"]

[[example]]
name = "moving_text"
required-features = ["windowing", "text"]

#[workspace]
#members = [
#    "examples/webgl",
#]
